crates/forge_domain/src/transformer/snapshots/forge_domain__transformer__drop_reasoning__tests__drop_reasoning_mixed_messages_with_and_without_reasoning.snap
---
source: crates/forge_domain/src/transformer/drop_reasoning.rs
expression: snapshot
---
transformation: DropReasoning_mixed
before:
  messages:
    - text:
        role: System
        content: System message with reasoning
        reasoning: System reasoning to remove
        tool_calls: ~
        model: ~
    - text:
        role: User
        content: User message without reasoning
        reasoning: ~
        tool_calls: ~
        model: ~
    - text:
        role: Assistant
        content: Assistant message with reasoning
        reasoning: Assistant reasoning to remove
        tool_calls:
          - name: test_tool
            call_id: call_123
            arguments:
              param: value
        model: ~
after:
  messages:
    - text:
        role: System
        content: System message with reasoning
        reasoning: ~
        tool_calls: ~
        model: ~
    - text:
        role: User
        content: User message without reasoning
        reasoning: ~
        tool_calls: ~
        model: ~
    - text:
        role: Assistant
        content: Assistant message with reasoning
        reasoning: ~
        tool_calls:
          - name: test_tool
            call_id: call_123
            arguments:
              param: value
        model: ~
