crates/forge_domain/src/transformer/snapshots/forge_domain__transformer__drop_reasoning__tests__drop_reasoning_removes_reasoning_from_text_messages.snap
---
source: crates/forge_domain/src/transformer/drop_reasoning.rs
expression: snapshot
---
transformation: DropReasoning
before:
  messages:
    - text:
        role: System
        content: System message
        reasoning: System reasoning
        tool_calls: ~
        model: ~
    - text:
        role: User
        content: User message
        reasoning: User reasoning
        tool_calls: ~
        model: ~
    - text:
        role: Assistant
        content: Assistant message
        reasoning: Assistant reasoning
        tool_calls: ~
        model: ~
after:
  messages:
    - text:
        role: System
        content: System message
        reasoning: ~
        tool_calls: ~
        model: ~
    - text:
        role: User
        content: User message
        reasoning: ~
        tool_calls: ~
        model: ~
    - text:
        role: Assistant
        content: Assistant message
        reasoning: ~
        tool_calls: ~
        model: ~
